# race-simulator-openmp

./: CMakeLists.txt  README.md  comp_run.sh
include/: game.h  interface.h  player.h  simulator.h
src/: game.cpp  interface.cpp  main.cpp  player.cpp  simulator.cpp
